# os-sem5

./: .gitignore  CMakeLists.txt  README.md  clean.sh  run.sh
lab1/: script.sh
lab2/: CMakeLists.txt  Makefile  README.md  testscript.sh
lab2/include/: matrix.h  matrixmath.h  ppm.h  transform.h
lab2/inppm/: cartoon.ppm  cat.ppm  green-circle.ppm  red-circle.ppm
lab2/outppm/: output.ppm
lab2/src/: main.c  matrix.c  matrixmath.c  ppm.c  transform.c
lab6/Unix_benchmarks/: Makefile
lab6/Unix_benchmarks/src/: arith.c  fstime.c  pipe.c  spawn.c  syscall.c
lab7/: Makefile
lab7/include/: params.h  procs_threads.h  race.h  standard.h  tolink.h
lab7/src/: god.c  hare.c  processes_main.c  reporter.c  threads_main.c  turtle.c  utils.c
xv6/: Makefile  arith.c  benchmark_arith.c  benchmark_pipe.c  benchmark_spawn.c  benchmark_syscall.c  console.c  defs.h  get_syscall_counts.c  pipe_test.c  proc.c  proc.h  syscall.c  syscall.h  sysproc.c  test_v2paddr.c  true.c  types.h  user.h  v2paddr.c
